Fixed link and z-index

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
   background-color: #abf0e9;
   padding: 5px;
   padding-top: 10px;
-  z-index: 1;
+  z-index: 100;
 }
 
 .logo {
